--- a/masters-project/my-app/app/globals.css
+++ b/masters-project/my-app/app/globals.css
@@ -118,3 +118,11 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+html {
+	@apply w-screen min-h-screen overflow-x-hidden;
+}
+
+body {
+	@apply w-screen min-h-screen overflow-x-hidden;
+}
